--- a/apps/stores/templates/store.html
+++ b/apps/stores/templates/store.html
@@ -27,6 +27,14 @@
         <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
             <li class="card h-100">
                 <div class="card-body d-flex flex-column">
+                    <button type="button" class="btn btn-primary" 
+                            data-bs-toggle="modal" 
+                            data-bs-target="#usersModal"
+                            data-product-id="{{ item.product.id }}"
+                            data-product-name="{{ item.product.name }}">
+                        Ver usuarios
+                    </button>
+
                     <h5 class="card-title">{{ item.product.name }}</h5>
                     <h6 class="card-subtitle mb-2 text-body-secondary">{{ item.product.description }}</h6>
                     
@@ -97,8 +105,8 @@
 <!-- Modals templates -->
 {% block modals %}
 {{ block.super }}
-{% include "components/modal/purchase_modal.html" %}
 {% if not working_hours %}
-{% include "components/modal/store_hours_modal.html" %}
+{% include "components/modal/working_hours_modal.html" %}
 {% endif %}
+{% include "modal/product_owners_modal.html" %}
 {% endblock %}
