--- a/apps/users/templates/profile/profile.html
+++ b/apps/users/templates/profile/profile.html
@@ -55,6 +55,10 @@
 
 <!-- Profile options -->
 <div>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#houseStatsModal">
+        Estadísticas de la casa
+    </button>
+
     <a href="{% url 'house_stats' %}">Estadísticas de la casa</a>
 
     <a href="{% url 'edit_profile' %}">Editar perfil</a>
@@ -94,7 +98,12 @@
                 {{ item.product.description }}
             </h6>
             <p class="card-text">Comprado en: {{ item.pur_date }}</p>
-            <p class="card-text">Expira en: {{ item.ex_date }}</p>
+            <p class="card-text"
+                {% if item.is_near_ex %}
+                style="color:orange; font-weight:bold"
+                {% endif %}>
+                Expira en: {{ item.ex_date }}
+            </p>
 
             <!-- Use item form -->
             {% if item.uses %}
@@ -125,5 +134,6 @@
 <!-- Modals templates -->
 {% block modals %}
 {{ block.super }}
-{% include "components/modal/usage_modal.html" %} 
+{% include "modal/usage_modal.html" %} 
+{% include "modal/house_stats_modal.html" %} 
 {% endblock %}
