--- a/apps/stores/templates/store.html
+++ b/apps/stores/templates/store.html
@@ -88,7 +88,12 @@
                             </button>
 
                             <!-- Gift -->
-                            <a href="{% url 'gift_view' item.product.id %}" class="btn btn-primary">Regalar</a>
+                            <button type="button" class="btn btn-primary"
+                                data-bs-toggle="modal"
+                                data-bs-target="#giftModal"
+                                data-url="{% url 'gift' item.product.id %}">
+                                Regalar
+                            </button>
                         </div>
                     </form>
                 </div>
@@ -109,4 +114,5 @@
 {% include "components/modal/working_hours_modal.html" %}
 {% endif %}
 {% include "modal/product_owners_modal.html" %}
+{% include "modal/gift_modal.html" %}
 {% endblock %}
