--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
                 <img src="{{ store.image_url }}" class="card-img-top" alt="Imagen de {{store.name}}" />
                 <div class="card-body">
                     <h5 class="card-title">{{store.name}}</h5>
-                    <a href="{% url 'store_view' store.id %}" class="btn btn-primary w-100">Entrar</a>
+                    <a href="{% url 'store' store.id %}" class="btn btn-primary w-100">Entrar</a>
                 </div>
             </div>
         </div>
