--- a/apps/bank/templates/bank.html
+++ b/apps/bank/templates/bank.html
@@ -64,39 +64,35 @@
     <h4>Cuentas premium</h4>
     <p>¿La cuenta standard limita tus abundantes ganancias? ¿Te ves obligado a gastar dinero en artículos que no quieres
         solo para no perder tu fortuna? ¿No tienes cómo alardear frente a la gente una suma mayor de 200 galeones? Todo
-        eso se resuelve con una Cuenta Premium: la opción perfecta para mantener tu estatus de ricachón.</p>
+        eso se resuelve con una Cuenta Premium: la opción perfecta para mantener tu estatus, que cuenta con un nuevo límite de hasta 400 galeones.
+    </p>
     
-    <!-- Type Premium -->
-    <div>
-        <h5>Cuenta Premium</h5>
-        <p>Precio: 80 galeones</p>
-        <p>Aumenta el límite de tu cuenta a 300 galeones por 3 meses.</p>
-        <form method="post">
-            {% csrf_token %}
-            <input type="hidden" name="account_type" value="premium">
+    <!-- Select duration-->
+    <form method="post">
+        {% csrf_token %}
+        
+        <div>
+            <h5>Cuenta Premium por 3 meses</h5>
+            <p>Precio: 80 galeones</p>
+            <input type="hidden" name="account_duration" value="60">
             <button type="button" class="btn btn-primary" data-title="Confirmación de compra"
-                data-message="¿Deseas comprar una cuenta Premium por 80 galeones? (Esta acción es irreversible)?"
+                data-message="¿Deseas comprar una cuenta Premium durante 3 meses por 80 galeones? (Esta acción es irreversible)?"
                 onclick="showConfirm(this)">
                 Comprar
             </button>
-        </form>
-    </div>
+        </div>
 
-    <!-- Type Premium Pro -->
-    <div>
-        <h5>Cuenta Premium Pro</h5>
-        <p>Precio: 100 galeones</p>
-        <p>Aumenta el límite de tu cuenta a 400 galeones por 6 meses.</p>
-        <form method="post">
-            {% csrf_token %}
-            <input type="hidden" name="account_type" value="premium_pro">
+        <div>
+            <h5>Cuenta Premium por 6 meses</h5>
+            <p>Precio: 100 galeones</p>
+            <input type="hidden" name="account_duration" value="90">
             <button type="button" class="btn btn-primary" data-title="Confirmación de compra"
-                data-message="¿Deseas comprar una cuenta Premium Pro por 100 galeones? (Esta acción es irreversible)?"
+                data-message="¿Deseas comprar una cuenta Premium durante 6 meses por 100 galeones? (Esta acción es irreversible)?"
                 onclick="showConfirm(this)">
                 Comprar
             </button>
-        </form>
-    </div>
+        </div>
+    </form>
 </section>
 
 {% endblock %}
