--- a/apps/stores/templates/store.html
+++ b/apps/stores/templates/store.html
@@ -94,7 +94,7 @@
                             </button>
 
                             <!-- Gift -->
-                            <button type="button" class="btn btn-primar55y"
+                            <button type="button" class="btn btn-primary"
                                 data-bs-toggle="modal"
                                 data-bs-target="#giftModal"
                                 data-url="{% url 'gift' item.product.id %}">
