--- a/apps/dashboards/templates/banker/loans_list.html
+++ b/apps/dashboards/templates/banker/loans_list.html
@@ -102,7 +102,8 @@
         </table>
         {% else %}
         <div>
-            <p colspan="5" class="text-center">No hay préstamos registrados.</p>
+            <p colspan="5" class="text-center">No hay préstamos registrados.
+                <br>Los registros de préstamos pagados se eliminarán al pasar 30 días</p>
         </div>
          {% endif %}
     </div>
