--- a/apps/dashboards/templates/banker/transactions_list.html
+++ b/apps/dashboards/templates/banker/transactions_list.html
@@ -32,7 +32,10 @@
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="5" class="text-center">No hay transacciones registradas.</td>
+                    <td colspan="5" class="text-center">
+                        <p>No hay transacciones registradas. 
+                        <br>Los registros de transacciones se eliminarán al pasar 30 días</p>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
