--- a/apps/users/templates/profile/house_stats.html
+++ b/apps/users/templates/profile/house_stats.html
@@ -1,4 +1,4 @@
-<h5>Varitas:</h5>
+<h5>Varitas</h5>
 <ul class="list-group mb-3">
     {% for u in users_with_wands %}
     <li class="list-group-item">{{ u.full_name }} ({{ u.house|title }})</li>
@@ -7,7 +7,7 @@
     {% endfor %}
 </ul>
 
-<h5>Escobas:</h5>
+<h5>Escobas</h5>
 <ul class="list-group">
     {% for u in users_with_brooms %}
     <li class="list-group-item">{{ u.full_name }} ({{ u.house|title }})</li>
