--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,10 @@
     {% endif %}
 </div>
 
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#notificationsModal">
+    Notificaciones
+</button>
+
 <!-- Diagon Alley -->
 <main class="container my-4">
 
