--- a/apps/bank/templates/bank.html
+++ b/apps/bank/templates/bank.html
@@ -78,7 +78,7 @@
             <p>Precio: 80 galeones</p>
             <input type="hidden" name="account_duration" value="60">
             <button type="button" class="btn btn-primary" data-title="Confirmación de compra"
-                data-message="¿Deseas comprar una cuenta Premium durante 3 meses por 80 galeones? (Esta acción es irreversible)?"
+                data-message="¿Deseas comprar una cuenta Premium durante 3 meses por 80 galeones? (Esta acción es irreversible)"
                 onclick="showConfirm(this)">
                 Comprar
             </button>
@@ -90,7 +90,7 @@
             <p>Precio: 100 galeones</p>
             <input type="hidden" name="account_duration" value="90">
             <button type="button" class="btn btn-primary" data-title="Confirmación de compra"
-                data-message="¿Deseas comprar una cuenta Premium durante 6 meses por 100 galeones? (Esta acción es irreversible)?"
+                data-message="¿Deseas comprar una cuenta Premium durante 6 meses por 100 galeones? (Esta acción es irreversible)"
                 onclick="showConfirm(this)">
                 Comprar
             </button>
