--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
         <!-- Modals templates -->
         {% block modals %}
         {% include "components/modal/confirm_modal.html" %}
+        {% include "components/modal/notifications_modal.html" %}
 
         {% for message in messages %}
         {% if "success" in message.tags %}
