Falta el balance del dashboard

--- a/apps/dashboards/templates/banker/banker_dashboard.html
+++ b/apps/dashboards/templates/banker/banker_dashboard.html
@@ -5,6 +5,8 @@
 <title>Banquero</title>
 {% endblock %}
 
+{% block body_class %}dashboard-body{% endblock %}
+
 {% block body %}
 
 <!-- Banker dashboard -->
