--- a/apps/users/templates/profile/profile.html
+++ b/apps/users/templates/profile/profile.html
@@ -165,6 +165,7 @@
 <!-- Modals templates -->
 {% block modals %}
 {{ block.super }}
-{% include "modal/usage_modal.html" %} 
+{% include "modal/notifications_modal.html" %}
 {% include "modal/house_stats_modal.html" %} 
+{% include "modal/usage_modal.html" %} 
 {% endblock %}
