--- a/apps/stores/templates/store.html
+++ b/apps/stores/templates/store.html
@@ -87,7 +87,7 @@
                                 type="button"
                                 class="btn btn-primary w-100"
                                 data-title="Confirmación de compra"
-                                data-message="¿Deseas comprar {{ item.product.name }} (Esta acción es irreversible)?"
+                                data-message="¿Deseas comprar {{ item.product.name }}? (Esta acción es irreversible)"
                                 onclick="showConfirm(this)"
                             >
                                 Comprar
