--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
 
         <!-- Static CSS -->
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        <link rel="stylesheet" href="{% static 'css/snow.css' %}">
 
         {% block head %} 
         {% endblock %}
@@ -43,5 +44,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
             crossorigin="anonymous"></script>
+        <script src="{% static 'js/seasons.js' %}"></script>
     </body>
 </html>
