Dashboard del dependiente con listas

--- a/apps/dashboards/templates/banker/loans_list.html
+++ b/apps/dashboards/templates/banker/loans_list.html
@@ -5,6 +5,8 @@
 <title>Préstamos</title>
 {% endblock %}
 
+{% block body_class %}dashboard-body{% endblock %}
+
 {% block body %}
 <main>
     <a href="{% url 'banker_dashboard' %}">🏠 Volver al dashboard</a>
