--- a/apps/dashboards/templates/banker/transactions_list.html
+++ b/apps/dashboards/templates/banker/transactions_list.html
@@ -5,6 +5,8 @@
 <title>Transacciones</title>
 {% endblock %}
 
+{% block body_class %}dashboard-body{% endblock %}
+
 {% block body %}
 <main>
     <a href="{% url 'banker_dashboard' %}">🏠 Volver al dashboard</a>
