--- a/apps/dashboards/templates/shopkeeper/shop_dashboard.html
+++ b/apps/dashboards/templates/shopkeeper/shop_dashboard.html
@@ -15,7 +15,7 @@
 
     <!-- Options -->
     <div>
-        <a href="" class="btn btn-success mb-3">Agregar Tienda</a>
+        <a href="{% url 'create_store' %}" class="btn btn-success mb-3">Agregar Tienda</a>
 
         <a href="{% url 'purchase_list' %}" class="btn btn-primary mb-3">Recibos de compra</a>
 
@@ -50,8 +50,8 @@
                 <th>
                     <p><h3>{{ store.name }}</h3>{{ store.description }}</p>
                     <div>
-                        <a href="" class="btn btn-sm btn-warning">Editar tienda</a>
-                        <a href="" class="btn btn-sm btn-success">Agregar Producto</a>
+                        <a href="{% url 'update_store' %}" class="btn btn-sm btn-warning">Editar tienda</a>
+                        <a href="{% url 'create_product' %}" class="btn btn-sm btn-success">Agregar Producto</a>
                     </div>
                 </th>
             </tr>
@@ -119,16 +119,16 @@
                                         <input class="form-check-input" type="checkbox" name="available_{{ product.pk }}" {% if warehouse.available %}checked{% endif %}>
                                         <label class="form-check-label">
                                             {% if warehouse.available %}
-                                                <span style="color:green">Disponible</span>
+                                            <span style="color:green">Disponible</span>
                                             {% else %}
-                                                <span style="color:red">No disponible</span>
+                                            <span style="color:red">No disponible</span>
                                             {% endif %}
                                         </label>
                                     </div>
                                 </td>
 
                                 <td>
-                                    <a href="" class="btn btn-sm btn-warning">Editar</a>
+                                    <a href="{% url 'update_product' %}" class="btn btn-sm btn-warning">Editar</a>
                                 </td>
                             </tr>
                             {% endwith %}
