--- a/apps/dashboards/templates/shopkeeper/shop_dashboard.html
+++ b/apps/dashboards/templates/shopkeeper/shop_dashboard.html
@@ -15,8 +15,6 @@
 
     <!-- Options -->
     <div>
-        <a href="{% url 'create_store' %}" class="btn btn-success mb-3">Agregar Tienda</a>
-
         <a href="{% url 'purchase_list' %}" class="btn btn-primary mb-3">Recibos de compra</a>
 
         <a href="{% url 'usage_list' %}" class="btn btn-primary mb-3">Recibos de uso</a>
@@ -50,8 +48,8 @@
                 <th>
                     <p><h3>{{ store.name }}</h3>{{ store.description }}</p>
                     <div>
-                        <a href="{% url 'update_store' %}" class="btn btn-sm btn-warning">Editar tienda</a>
-                        <a href="{% url 'create_product' %}" class="btn btn-sm btn-success">Agregar Producto</a>
+                        <a href="{% url 'update_store' store.pk %}" class="btn btn-sm btn-warning">Editar tienda</a>
+                        <a href="{% url 'create_product' store.pk %}" class="btn btn-sm btn-success">Agregar Producto</a>
                     </div>
                 </th>
             </tr>
@@ -115,20 +113,15 @@
                                 </td>
 
                                 <td>
-                                    <div class="form-check form-switch">
-                                        <input class="form-check-input" type="checkbox" name="available_{{ product.pk }}" {% if warehouse.available %}checked{% endif %}>
-                                        <label class="form-check-label">
-                                            {% if warehouse.available %}
-                                            <span style="color:green">Disponible</span>
-                                            {% else %}
-                                            <span style="color:red">No disponible</span>
-                                            {% endif %}
-                                        </label>
-                                    </div>
+                                    {% if warehouse.available %}
+                                    <span style="color:green">Disponible</span>
+                                    {% else %}
+                                    <span style="color:red">No disponible</span>
+                                    {% endif %}
                                 </td>
 
                                 <td>
-                                    <a href="{% url 'update_product' %}" class="btn btn-sm btn-warning">Editar</a>
+                                    <a href="{% url 'update_product' product.pk %}" class="btn btn-sm btn-warning">Editar</a>
                                 </td>
                             </tr>
                             {% endwith %}
