--- a/apps/dashboards/templates/shopkeeper/shop_dashboard.html
+++ b/apps/dashboards/templates/shopkeeper/shop_dashboard.html
@@ -19,8 +19,6 @@
 
         <a href="{% url 'usage_list' %}" class="btn btn-primary mb-3">Recibos de uso</a>
 
-        <!-- <a href="{% url 'usage_list' %}" class="btn btn-success mb-3">Editar inventario</a> -->
-
         <!-- Logout -->
         <div>
             <form method="POST" action="{% url 'logout' %}">
@@ -122,6 +120,16 @@
 
                                 <td>
                                     <a href="{% url 'update_product' product.pk %}" class="btn btn-sm btn-warning">Editar</a>
+
+                                    <a href="#" 
+                                       class="btn btn-sm btn-success" 
+                                       data-bs-toggle="modal" 
+                                       data-bs-target="#grantProductModal{{ product.pk }}">
+                                       Otorgar producto
+                                    </a>
+                                    {% if product.pk %}
+                                    {% include "shopkeeper/modal/grant_product_modal.html" %}
+                                    {% endif %}
                                 </td>
                             </tr>
                             {% endwith %}
