Fixed tx in dashboard

--- a/apps/dashboards/templates/banker/transactions_list.html
+++ b/apps/dashboards/templates/banker/transactions_list.html
@@ -30,7 +30,7 @@
                     <td>{{ tx.sender.username }} ({{ tx.sender.full_name }})</td>
                     <td>{{ tx.receiver.username }} ({{ tx.receiver.full_name }})</td>
                     <td>{{ tx.amount }}</td>
-                    <td>{{ tx.created_at|date:"d/m/Y H:i" }}</td>
+                    <td>{{ tx.created_at }}</td>
                 </tr>
                 {% empty %}
                 <tr>
