--- a/apps/bank/templates/bank.html
+++ b/apps/bank/templates/bank.html
@@ -33,7 +33,7 @@
                 <span style="color:green;">Activa</span>
                 {% endif %}
 
-                <p>Para evitar que una cuenta se congele te sugerimos comprar un artículo del Callejón Diagon cada copa.</p>
+                <p>Para evitar que tu cuenta se congele debes comprar un artículo del Callejón Diagon cada copa.</p>
             </li>
 
             <!-- Account type info -->
