--- a/apps/bank/templates/bank.html
+++ b/apps/bank/templates/bank.html
@@ -12,7 +12,7 @@
 
     <!-- Bank info -->
     <div>
-        <h2>Bienvenido, {{ user.full_name }} al Banco Gringotts.</h2>
+        <h2>Bienvenido, {{ user.full_name }}, al Banco Gringotts.</h2>
         <p>Lugar más seguro de todo el mundo mágico.</p>
 
         <!-- Account info -->
